--- a/frontend/src/styles/WriteReview.css
+++ b/frontend/src/styles/WriteReview.css
@@ -5,7 +5,8 @@ textarea,
 }
 
 .header {
-  font-size: 40px;
+  margin-top: 50px;
+  font-size: 44px;
   text-align: center;
 }
 
@@ -69,6 +70,7 @@ textarea,
   display: inline-block;
   overflow: hidden;
   position: relative;
+  margin-top: -20px;
   margin-left: auto;
   margin-right: auto;
   width: 200px;
@@ -123,6 +125,7 @@ input[type="file"]::file-selector-button {
   height: 60px;
   font-size: 24px;
   margin-top: 60px;
+  margin-bottom: 100px;
 }
 
 .submit-btn:hover {
