--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,6 +1,16 @@
+p {
+  font-size: 24px;
+  color: white;
+}
+
 a {
   text-decoration: none;
 }
+
+/* input {
+  border: none;
+  box-shadow: 3px 3px 3px black;
+} */
 
 .navbar {
   background-color: rgb(5, 29, 49);
@@ -13,17 +23,20 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 7;
 }
 
 .navbar > * {
-  /* background-color: aliceblue; */
   width: 100%;
   display: flex;
 }
 
-.navigation-left {
-  padding-left: 40px;
-  gap: 40px;
+.navigation-left,
+.navigation-middle,
+.navigation-right > * {
+  /* background-color: brown; */
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .navigation-middle {
@@ -31,36 +44,55 @@ a {
   gap: 140px;
 }
 
+.navigation-left {
+  padding-left: 40px;
+  gap: 40px;
+  height: 100%;
+  margin-top: 9.5px;
+}
+
+/* .navigation-left > * {
+  margin-top: auto;
+  margin-bottom: auto;
+} */
+
 .navigation-right {
   justify-content: flex-end;
   padding-right: 50px;
   gap: 40px;
 }
 
-.navigation-left,
-.navigation-middle,
-.navigation-right > * {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.navigation-middle:hover > * {
+.navigation-middle:hover > *,
+.sign-btns > * {
   cursor: pointer;
 }
 
 .input-field {
   width: 300px;
-  z-index: 2;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: none;
+  z-index: 9;
   position: relative;
+}
+
+.search-bar {
+  display: flex;
 }
 
 .search-icon {
   position: relative;
-  z-index: 1;
+  z-index: 9;
   color: rgb(134, 134, 134);
   font-size: 32px;
   left: -45px;
   top: 9px;
+}
+
+.search-icon:hover {
+  cursor: pointer;
 }
 
 .home-btn {
@@ -71,6 +103,7 @@ a {
 }
 
 .profile-icon {
+  color: white;
   font-size: 40px;
   padding: 0;
   position: relative;
@@ -83,16 +116,17 @@ a {
 
 .profile-dropdown {
   position: fixed;
-  background-color: rgb(170, 170, 201);
+  background-color: rgb(171, 171, 219);
   left: 85%;
   top: 70px;
   width: 15%;
 }
 
-.profile-dropdown > p,
+.profile-dropdown > * > p,
 .sign-out-btn {
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-left: 15px;
   border: 1px solid rgb(89, 93, 115);
   color: white;
 }
@@ -103,17 +137,24 @@ a {
 
 .search-dropdown {
   box-sizing: border-box;
-  z-index: 0;
+  z-index: 8;
   position: fixed;
   background-color: rgb(233, 177, 234);
-  left: 120px;
-  top: 61px;
-  width: 312px;
+  top: 50px;
+  width: 300px;
   height: 300px;
   padding: 20px;
   border-radius: 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .search-dropdown > p {
   font-size: 22px;
+}
+
+.sign-btns {
+  display: flex;
+  gap: 100px;
+  margin-right: 35px;
 }
