--- a/frontend/src/styles/WriteReview.css
+++ b/frontend/src/styles/WriteReview.css
@@ -6,7 +6,7 @@ textarea,
 
 .header {
   margin-top: 50px;
-  font-size: 44px;
+  font-size: 48px;
   text-align: center;
 }
 
@@ -23,6 +23,7 @@ textarea,
   display: flex;
   flex-direction: column;
   text-align: left;
+  margin-top: -10px;
   /* background-color: blue; */
 }
 
@@ -56,8 +57,9 @@ textarea,
 }
 
 .photo-input {
-  width: 300px;
-  height: 100px;
+  box-sizing: border-box;
+  width: 400px;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 4px;
@@ -66,29 +68,48 @@ textarea,
   border-radius: 20px;
 }
 
+.photo-input > input {
+  width: 100%;
+  padding-right: 40px;
+  margin: 30px 0px;
+  border: none;
+}
+
 .uploaded-img {
   display: inline-block;
   overflow: hidden;
   position: relative;
-  margin-top: -20px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
+  /* width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 50%; */
+  max-width: 400px;
+  max-height: 400px;
+  padding: 0px 30px 30px 30px;
+  /* min-height: 30px; */
+  /* margin: 30px 0px; */
 }
 
 .uploaded-img > img {
-  margin-top: auto;
-  margin-bottom: auto;
+  width: 100%;
+  height: 100%;
+  max-height: 300px;
+  /* margin: 0px 30px 30px 30px; */
+}
+
+.uploaded-img > button {
+  /* border: 1px solid rgb(107, 117, 255); */
+  background-color: aliceblue;
+  border: 1px solid black;
+  margin-top: 20px;
+  padding: 3px 10px;
 }
 
 input[type="file"]::file-selector-button {
   cursor: pointer;
   background-color: aliceblue;
   border: 1px solid black;
-  margin-top: 35px;
-  margin-left: 42px;
+  margin-top: 0px;
+  margin-left: 40px;
   margin-right: 16px;
 }
 
