--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -2,6 +2,7 @@
     padding: 1rem;
     text-align: center;
     margin-top: 60px;
+    color: #142954;
   }
   
 .home-title {
@@ -13,14 +14,14 @@
   
 .reviews-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-template-columns: repeat(3, minmax(180px, 1fr));
     gap: 1rem;
-    padding: 1rem;
+    padding: 5rem;
 }
   
 .review-card {
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 12px;
     padding: 1rem;
     text-align: center;
 }
@@ -28,11 +29,16 @@
 .review-card h3 {
     margin: 0.5rem 0;
     font-size: 1.2rem;
+    text-align: left;
 }
   
 .review-card p {
     font-size: 1rem;
     color: #666;
+}
+
+.review-card .review-rating {
+    text-align: right;
 }
   
 .review-card img {
@@ -43,11 +49,12 @@
   
 .review-button {
     background-color: #0044cc;
-    color: white;
+    color: #5988e7;
     border: none;
     border-radius: 4px;
     padding: 0.5rem 1rem;
     margin-top: 1rem;
     cursor: pointer;
 }
-  
+
+
