--- a/frontend/src/styles/LoginPage.module.css
+++ b/frontend/src/styles/LoginPage.module.css
@@ -1,25 +1,23 @@
-
 .root {
-    position: absolute;
-    align-items: center;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    flex-direction: column;
-    outline: solid 1px #aabcd2;
-    outline-offset: -1px;
-    overflow: hidden;
+  position: absolute;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  outline: solid 1px #aabcd2;
+  outline-offset: -1px;
+  overflow: hidden;
 }
-
 
 .tasteUCLA {
   color: #1e1e1e;
   font-size: 41.5102px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   display: flex;
   text-align: center;
@@ -33,7 +31,7 @@
   flex-direction: column;
 }
 
-.logo{
+.logo {
   position: fixed;
   margin-left: auto;
   margin-right: auto;
@@ -49,8 +47,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   margin-left: auto;
@@ -61,7 +59,7 @@
   flex-direction: column;
 }
 
-.username_textbox{
+.username_textbox {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -77,8 +75,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   top: 51%;
@@ -103,14 +101,13 @@ width: 89.5384px;
   outline-offset: 0px;
 }
 
-
 .signIn {
   color: #1e1e1e;
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   margin-left: auto;
@@ -139,8 +136,8 @@ width: 89.5384px;
   font-size: 13.2078px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.022em;
   text-align: center;
   position: absolute;
@@ -157,8 +154,8 @@ width: 89.5384px;
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   margin-left: auto;
@@ -179,4 +176,8 @@ width: 89.5384px;
   height: 26.4156px;
   outline: solid 1px #9747ff;
   outline-offset: 0px;
+}
+
+.signInBtn {
+  border: 1px solid black;
 }
