--- a/frontend/src/styles/Restaurant.module.css
+++ b/frontend/src/styles/Restaurant.module.css
@@ -84,19 +84,20 @@
   'Liberation Sans', sans-serif;
   letter-spacing: -0.023em;
   display: flex;
-  text-align: center;
+  text-align: left;
   position: relative;
   margin-left: 20px;
   margin-right: auto;
   top: 80px;
-  font-size: 40px;
+  font-size: 20px;
+  width: 600px;
 }
 
 .reviews_container{
   display: flex;
 }
 
-.reviews_title{
+.reviews_header{
   color: #1e1e1e;
   line-height: 150%;
   font-weight: 500;
@@ -122,9 +123,97 @@
 .grid_item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid black;
-  padding: 100px;
+  padding: 30px;
   font-size: 30px;
-  text-align: center;
   margin-bottom: 50px;
 }
+
+.review_content{
+  display: flex;
+  flex-direction: row;
+}
+
+.profile_pic{
+  height: 200px;
+  width: 200px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  top: 120px;
+}
+
+.username{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: center;
+  position: relative;
+  font-size: 30px;
+  margin-bottom: 10px;
+  width: min-content;
+}
+
+.user_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 50px;
+
+}
+/*
+margin-right: 1100px;
+  margin-left: auto;
+*/
+
+.review_rating{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: center;
+  position: relative;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.review_title{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: center;
+  position: relative;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.review_description{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: left;
+  position: relative;
+  font-size: 15px;
+  inline-size: 1050px;
+  overflow-wrap: break-word;
+}
+
+.rating_desc_container_{
+  display: flex;
+}
+
 
