--- a/frontend/src/styles/Restaurant.module.css
+++ b/frontend/src/styles/Restaurant.module.css
@@ -19,6 +19,7 @@
   display: flex;
   text-align: center;
   position: relative;
+  margin-top: 20px;
   margin-left: 20px;
   margin-right: auto;
   top: 80px;
@@ -86,6 +87,7 @@
   display: flex;
   text-align: left;
   position: relative;
+  margin-top: 10px;
   margin-left: 20px;
   margin-right: auto;
   top: 80px;
@@ -120,7 +122,7 @@
   margin-bottom: 50px;
 } 
 
-.grid_item {
+.reviews_grid_item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid black;
   padding: 30px;
@@ -210,10 +212,87 @@ margin-right: 1100px;
   font-size: 15px;
   inline-size: 1050px;
   overflow-wrap: break-word;
+  margin-bottom: 20px;
 }
 
-.rating_desc_container_{
+.comments_header{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
   display: flex;
+  text-align: center;
+  position: relative;
+  margin-left: 20px;
+  margin-right: auto;
+  font-size: 30px;
 }
 
+.comments_grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(800px, 1375px));
+  margin-left: auto;
+  margin-right: auto;
+} 
 
+.comments_grid_item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid black;
+  padding: 30px;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.comments_content{
+  display: flex;
+  flex-direction: row;
+}
+
+.comments_profile_pic{
+  height: 125px;
+  width: 125px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  top: 120px;
+}
+
+.comments_username{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: center;
+  position: relative;
+  font-size: 25px;
+  margin-bottom: 10px;
+  width: min-content;
+}
+
+.comments_user_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.comments_description{
+  color: #1e1e1e;
+  line-height: 150%;
+  font-weight: 500;
+  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  'Liberation Sans', sans-serif;
+  letter-spacing: -0.023em;
+  display: flex;
+  text-align: left;
+  position: relative;
+  font-size: 15px;
+  inline-size: 1050px;
+  overflow-wrap: break-word;
+  margin-bottom: 20px;
+}
