--- a/frontend/src/styles/Locations.module.css
+++ b/frontend/src/styles/Locations.module.css
@@ -53,10 +53,28 @@
 
   .grid_item {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid black;
+    border: 0.5px solid black;
     padding: 5px;
     font-size: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+   
+  }
+
+  .grid_item_restaurant_name {
+    color: #1e1e1e;
+    line-height: 150%;
+    font-weight: 500;
+    font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+    'Liberation Sans', sans-serif;
+    letter-spacing: -0.023em;
+    display: flex;
     text-align: center;
+    position: relative;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: auto;
   }
 
   .CentralCampus_title{
@@ -104,7 +122,6 @@
   .SouthCampus_reviews_grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    margin-top: 85px;
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 50px;
