--- a/frontend/src/styles/Locations.module.css
+++ b/frontend/src/styles/Locations.module.css
@@ -7,6 +7,7 @@
     outline: solid 1px #aabcd2;
     outline-offset: -1px;
     overflow: hidden;
+    background-color: #E2F1F5;
   }
 
   .Locations_title{
@@ -52,7 +53,7 @@
   } 
 
   .grid_item {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #FFFF;
     border: 0.5px solid black;
     padding: 5px;
     font-size: 30px;
@@ -63,9 +64,9 @@
   }
 
   .grid_item_restaurant_name {
-    color: #1e1e1e;
+    color: #1975b5;
     line-height: 150%;
-    font-weight: 500;
+    font-weight: bold;
     font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
     'Liberation Sans', sans-serif;
     letter-spacing: -0.023em;
