--- a/frontend/src/styles/Restaurant.module.css
+++ b/frontend/src/styles/Restaurant.module.css
@@ -10,6 +10,10 @@
     background-color: #E2F1F5;
   }
 
+  .back_button{
+    position: relative;
+  }
+
 .restaurant_name{
   color: #1e1e1e;
   line-height: 150%;
@@ -19,10 +23,10 @@
   display: flex;
   text-align: center;
   position: relative;
-  margin-top: 20px;
+  margin-top: 40px;
   margin-left: 20px;
   margin-right: auto;
-  top: 80px;
+  top: 110px;
   font-size: 50px;
 }
 
