--- a/frontend/src/styles/Restaurant.module.css
+++ b/frontend/src/styles/Restaurant.module.css
@@ -180,7 +180,7 @@
 }
 
 .review_rating{
-  color: #1e1e1e;
+  color: #D69C03;
   line-height: 150%;
   font-weight: 500;
   font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
@@ -196,9 +196,7 @@
 .review_title{
   color: #1e1e1e;
   line-height: 150%;
-  font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-  'Liberation Sans', sans-serif;
+  font-weight: bold;
   letter-spacing: -0.023em;
   display: flex;
   text-align: center;
@@ -211,13 +209,12 @@
   color: #1e1e1e;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-  'Liberation Sans', sans-serif;
+  font-family: "Georgia";
   letter-spacing: -0.023em;
   display: flex;
   text-align: left;
   position: relative;
-  font-size: 15px;
+  font-size: 20px;
   inline-size: 1050px;
   overflow-wrap: break-word;
   margin-bottom: 20px;
@@ -235,7 +232,7 @@
   position: relative;
   margin-left: 20px;
   margin-right: auto;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .comments_grid {
@@ -248,7 +245,7 @@
 .comments_grid_item {
   background-color: rgba(255, 255, 255, 0.8);
   border: 3px solid #DED0F5;
-  padding: 30px;
+  padding: 15px;
   font-size: 30px;
   margin-bottom: 20px;
 }
@@ -264,7 +261,7 @@
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
-  top: 120px;
+  top: 70px;
 }
 
 .comments_username{
@@ -278,7 +275,7 @@
   text-align: center;
   position: relative;
   font-size: 25px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: min-content;
 }
 
@@ -293,14 +290,14 @@
   color: #1e1e1e;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-  'Liberation Sans', sans-serif;
+  font-family: "Georgia";
   letter-spacing: -0.023em;
   display: flex;
   text-align: left;
   position: relative;
-  font-size: 15px;
+  font-size: 20px;
   inline-size: 1050px;
   overflow-wrap: break-word;
   margin-bottom: 20px;
+  top: 20px;
 }
