--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -139,18 +139,24 @@ a {
   box-sizing: border-box;
   z-index: 8;
   position: fixed;
-  background-color: rgb(233, 177, 234);
+  background-color: rgb(72, 135, 237);
   top: 50px;
   width: 300px;
-  height: 300px;
+  height: 200px;
   padding: 20px;
   border-radius: 5px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  overflow-y: auto;
 }
 
 .search-dropdown > p {
   font-size: 22px;
+}
+
+.search-dropdown search-result-item {
+  font-size: 18px;
+  color: blue;
 }
 
 .sign-btns {
