--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -110,8 +110,16 @@ a {
   right: 0px;
 }
 
-.profile-icon:hover {
+.profile-icon:hover,
+.profile-image-icon:hover {
   cursor: pointer;
+}
+
+.profile-image-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile-dropdown {
