--- a/frontend/src/styles/Locations.module.css
+++ b/frontend/src/styles/Locations.module.css
@@ -1,6 +1,6 @@
 .root {
     position: absolute;
-    top:0;
+    top:70px;
     left:0;
     right:0;
     flex-direction: column;
@@ -13,21 +13,20 @@
   .Locations_title{
     color: #1e1e1e;
     line-height: 150%;
-    font-weight: 500;
-    font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+    font-family: 'Trebuchet MS';
+    font-weight: bold;
     letter-spacing: -0.023em;
     display: flex;
     text-align: center;
     position: relative;
     margin-left: 20px;
     margin-right: auto;
-    top: 80px;
-    font-size: 30px;
+    top: 10px;
+    font-size: 40px;
   }
 
   .NorthCampus_title{
-    color: #1e1e1e;
+    color: #4E8FA0;
     line-height: 150%;
     font-weight: 500;
     font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
@@ -39,14 +38,14 @@
     margin-left: 40px;
     margin-right: auto;
     margin-bottom: 5px;
-    top: 80px;
+    top: 10px;
     font-size: 30px;
   }
 
   .NorthCampus_reviews_grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-    margin-top: 85px;
+    margin-top: 15px;
     margin-left: 40px;
     margin-right: 40px;
     margin-bottom: 50px;
@@ -79,7 +78,7 @@
   }
 
   .CentralCampus_title{
-    color: #1e1e1e;
+    color: #4E8FA0;
     line-height: 150%;
     font-weight: 500;
     font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
@@ -105,7 +104,7 @@
 
 
   .SouthCampus_title{
-    color: #1e1e1e;
+    color: #4E8FA0;
     line-height: 150%;
     font-weight: 500;
     font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
