Add restaurant images to search results page

--- a/frontend/src/styles/SearchResults.module.css
+++ b/frontend/src/styles/SearchResults.module.css
@@ -37,19 +37,19 @@
 }
 
 .rests_container{
-    background-color: #051d3159;
-    /* outline: #6776ff;
+    /* background-color: #051d3159; */
+    outline: #6776ff;
     outline-style: solid;
-    outline-width: 1px; */
+    outline-width: 1px;
     overflow-x: hidden;
     margin: 10px;
 }
 
 .users_container{
-    background-color: #0e45723f;
-    /* outline: #6776ff;
+    /* background-color: #0e45723f; */
+    outline: #6776ff;
     outline-style: solid;
-    outline-width: 1px; */
+    outline-width: 1px;
     overflow-x: hidden;
     margin: 10px;
 }
@@ -65,13 +65,12 @@
 
 .section_grid{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(10px, 200px));
-    margin-left: auto;
-    margin-right: auto;
+    grid-template-columns: repeat(auto-fill, minmax(10px, 300px));
     margin: 10px;
 }
 
 .section_grid_item{
+    display: flex;
     color: #ffffff;
     background-color: #1b5e76;
     border: 1px solid #77cdff;
@@ -80,13 +79,29 @@
     margin: 5px;
 }
 
+.section_grid_item_col{
+    display: flex;
+    grid-template-columns: repeat(2, minmax(0px,600px));
+}
+
 .grid_item_text{
+    display: flex;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    margin: 5px;
 }
 
 .grid_item_title{
+    display: flex;
     color: rgb(85, 178, 255);
-    font-size: 16px;
+    font-size: 20px;
+    margin: 5px;
+}
+
+.grid_item_img{
+    display: flex;
+    width: 75px;
+    height: 75px;
+    margin: 5px;
 }
