update comment box and add popup

--- a/frontend/src/styles/ShowReview.css
+++ b/frontend/src/styles/ShowReview.css
@@ -20,7 +20,7 @@ body {
 }
 
 .row{
-  display: flex;
+  display: block;
   margin-bottom: 20px;
 }
 
@@ -148,4 +148,19 @@ body {
   font-size: 15px;
   margin-left: 180px;
 }
+.popup-content {
+  background-color: transparent; 
+  color: black;   
+  border: none !important;       
+  border-radius: 10px;   
+  max-width: 600px;
+  max-height: 300px;
+  text-align: center;   
+}
+
+.popup-content p {
+  font-size: 20px;        /* Font size for paragraphs */
+  color: black;
+}
+
 
