--- a/frontend/src/styles/MyReviews.module.css
+++ b/frontend/src/styles/MyReviews.module.css
@@ -10,3 +10,75 @@
   background-color: #E2F1F5;
   height: calc(100vh - 70px);
 }
+
+.home-logo{
+  margin-left: 150px;
+  width: 40.5584px;
+  height: 39.6734px;
+  background-color: #9747ff;
+  transform: rotate(45deg);
+}
+
+.myreviews_title{
+  margin-top: 100px;
+  margin-left: 50px;
+  font-size: 50px;
+  text-align: left;
+}
+
+.reviews_container{
+  background-color: #051d3113;
+  outline: #6776ff;
+  outline-style: solid;
+  outline-width: 1px;
+  overflow-x: hidden;
+  margin: 10px;
+  margin-top: 100px;
+  border-radius: 12px;
+}
+
+.section_grid{
+  display: grid;
+  grid-template-columns: repeat(1, minmax(10px, 100000px));
+  margin: 10px;
+}
+
+.section_grid_item{
+  display: flex;
+  flex-basis: content;
+  color: #ffffff;
+  background-color: #051d3120;
+  border: 1px solid #77cdff;
+  border-radius: 12px;
+  padding: 5px;
+  font-size: 14px;
+  margin: 5px;
+}
+
+.section_grid_item_col{
+  display: flex;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  grid-template-columns: repeat(2, minmax(100px,600px));
+}
+
+.grid_item_text{
+  color: #0477b9;
+  font-size: 16px;
+  overflow: hidden;
+}
+
+.grid_item_title{
+  display: flex;
+  color: #051d31;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.grid_item_img{
+  display: flex;
+  width: 200px;
+  height: 200px;
+  margin: 5px;
+  border-radius: 12px;
+}
