--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -142,3 +142,14 @@
 .delete-account-btn:hover {
   background-color: rgb(254, 228, 228);
 }
+
+/* ONLY FOR USERPROFILE PAGE */
+
+.bio-container > p {
+  background-color: white;
+  border: 1px solid rgb(107, 117, 255);
+  color: black;
+  padding: 10px;
+  font-size: 16px;
+  text-align: left;
+}
