Put logo on pages

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,68 +1,72 @@
 .home-container {
-    padding: 1rem;
-    text-align: center;
-    margin-top: 60px;
-    color: #142954;
-  }
-  
-.home-title {
-    margin-top: 100px;
-    margin-left: 50px;
-    font-size: 50px;
-    text-align: left;
+  padding: 1rem;
+  text-align: center;
+  margin-top: 60px;
+  color: #142954;
 }
 
-.home-logo{
-    margin-left: 150px;
-    width: 40.5584px;
-    height: 39.6734px;
-    background-color: #9747ff;
-    transform: rotate(45deg);
+.home-title {
+  margin-top: 100px;
+  margin-left: 50px;
+  font-size: 50px;
+  text-align: left;
 }
-  
+
+.home-logo {
+  margin-left: 150px;
+  width: 40.5584px;
+  height: 39.6734px;
+  background-color: #9747ff;
+  transform: rotate(45deg);
+}
+
+.tasteucla-logo {
+  width: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+}
+
 .reviews-grid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(180px, 1fr));
-    gap: 1rem;
-    padding: 5rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(180px, 1fr));
+  gap: 1rem;
+  padding: 30px 50px;
 }
-  
+
 .review-card {
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    padding: 1rem;
-    text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 1rem;
+  text-align: center;
 }
-  
+
 .review-card h3 {
-    margin: 0.5rem 0;
-    font-size: 1.2rem;
-    text-align: left;
+  margin: 0.5rem 0;
+  font-size: 1.2rem;
+  text-align: left;
 }
-  
+
 .review-card p {
-    font-size: 1rem;
-    color: #666;
+  font-size: 1rem;
+  color: #666;
 }
 
 .review-card .review-rating {
-    text-align: right;
+  text-align: right;
 }
-  
+
 .review-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
-  
+
 .review-button {
-    background-color: #0044cc;
-    color: #5988e7;
-    border: none;
-    border-radius: 4px;
-    padding: 0.5rem 1rem;
-    margin-top: 1rem;
-    cursor: pointer;
+  background-color: #0044cc;
+  color: #5988e7;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  cursor: pointer;
 }
-
-
