--- a/frontend/src/styles/SignUpPage.module.css
+++ b/frontend/src/styles/SignUpPage.module.css
@@ -1,24 +1,23 @@
 .root {
-    position: absolute;
-    align-items: center;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    flex-direction: column;
-    outline: solid 1px #aabcd2;
-    outline-offset: -1px;
-    overflow: hidden;
+  position: absolute;
+  align-items: center;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  outline: solid 1px #aabcd2;
+  outline-offset: -1px;
+  overflow: hidden;
 }
-
 
 .tasteUCLA {
   color: #1e1e1e;
   font-size: 41.5102px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   display: flex;
   text-align: center;
@@ -32,7 +31,7 @@
   flex-direction: column;
 }
 
-.logo{
+.logo {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -43,13 +42,18 @@
   transform: rotate(45deg);
 }
 
+.tasteucla_logo {
+  width: 270px;
+  margin-top: 70px;
+}
+
 .error_message {
   color: #dd5656;
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   margin-left: auto;
@@ -64,8 +68,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   margin-left: auto;
@@ -77,7 +81,7 @@
   flex-direction: column;
 }
 
-.username_textbox{
+.username_textbox {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -93,8 +97,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   text-align: center;
   position: absolute;
@@ -122,8 +126,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   text-align: center;
   position: absolute;
@@ -148,8 +152,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   text-align: center;
@@ -177,8 +181,8 @@
   font-size: 16.9814px;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   position: absolute;
   text-align: center;
