--- a/frontend/src/styles/WriteReview.css
+++ b/frontend/src/styles/WriteReview.css
@@ -219,3 +219,16 @@ input[type="file"]::file-selector-button {
   background-color: white; 
   color: black; 
 }
+
+.error_message {
+  color: #dd5656;
+  line-height: 150%;
+  font-weight: 500;
+  letter-spacing: -0.023em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  text-align: center;
+  top: 33%;
+  flex-direction: column;
+}
