--- a/frontend/src/styles/ShowReview.css
+++ b/frontend/src/styles/ShowReview.css
@@ -9,7 +9,20 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
+}
 
+.restaurant-name {
+  color: black;
+  width: fit-content;
+}
+
+.restaurant-name > * > p {
+  color: black;
+  text-decoration: underline;
+}
+
+.review-username {
+  width: fit-content;
 }
 
 .review-image {
@@ -19,7 +32,7 @@ body {
   margin-top: 30px;
 }
 
-.row{
+.row {
   display: block;
   margin-bottom: 20px;
 }
@@ -30,24 +43,22 @@ body {
 }
 
 .container h1 {
-  font-size: 40px;
+  font-size: 46px;
 }
 
-.created_time{
-  color: #1e1e1e;
+.created_time,
+.updated_time {
+  color: rgb(125, 133, 149);
   display: flex;
   position: relative;
-  font-size: 20px;
+  font-size: 16px;
 }
 
-.updated_time{
-  color: #1e1e1e;
-  display: flex;
-  position: relative;
-  font-size: 20px;
+.created_time {
+  margin-top: 10px;
 }
 
-.reviews-header{
+.reviews-header {
   color: #1e1e1e;
   display: flex;
   position: relative;
@@ -55,13 +66,30 @@ body {
   margin-top: 30px;
 }
 
-.comments-grid {
+.restaurant-logo {
+  position: absolute;
+  margin-left: 75vw;
+  display: flex;
+  justify-content: end;
+  padding-right: 150px;
+}
+
+.restaurant-logo > img {
+  width: 250px;
+}
+
+.comments-grid,
+.user-comments-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(800px, 1375px));
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-} 
+}
+
+.user-comments-grid {
+  margin-top: 30px;
+}
 
 .comment-textbox {
   margin-left: auto;
@@ -71,22 +99,25 @@ body {
   outline-offset: 0px;
 }
 
+.comment-textbox > form > textarea {
+  min-height: 150px;
+}
 
 .comments_grid_item {
   background-color: rgba(255, 255, 255, 0.8);
-  border: 3px solid #DED0F5;
+  border: 3px solid #ded0f5;
   padding: 15px;
   font-size: 30px;
   margin-bottom: 20px;
 }
 
-.comments_content{
+.comments_content {
   display: flex;
   flex-direction: row;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
-.comments_profile_pic{
+.comments_profile_pic {
   height: 125px;
   width: 125px;
   background-color: #bbb;
@@ -95,12 +126,12 @@ body {
   top: 120px;
 }
 
-.comments_username{
+.comments_username {
   color: #1e1e1e;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-  'Liberation Sans', sans-serif;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   letter-spacing: -0.023em;
   display: flex;
   text-align: center;
@@ -110,56 +141,56 @@ body {
   width: min-content;
 }
 
-.comments_user_container{
+.comments_user_container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-right: 50px;
+  margin-left: 20px;
 }
 
-.comments_description{
+.comments_description {
   color: #1e1e1e;
   line-height: 150%;
   font-weight: 500;
-  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-  'Liberation Sans', sans-serif;
-  letter-spacing: -0.023em;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+  /* letter-spacing: -0.023em; */
   display: flex;
   text-align: left;
   position: relative;
-  font-size: 15px;
+  font-size: 18px;
   inline-size: 1050px;
   overflow-wrap: break-word;
+  /* overflow-y: auto;
+  max-height: 200px; */
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 
-.created_time_comment{
-  color: #1e1e1e;
+.created_time_comment,
+.updated_time_comment {
+  width: 100%;
+  color: rgb(146, 146, 146);
   display: flex;
   position: relative;
   font-size: 15px;
-  margin-left: 180px;
+  justify-content: end;
+  padding-right: 8px;
 }
 
-.updated_time_comment{
-  color: #1e1e1e;
-  display: flex;
-  position: relative;
-  font-size: 15px;
-  margin-left: 180px;
-}
 .popup-content {
-  background-color: transparent; 
-  color: black;   
-  border: none !important;       
-  border-radius: 10px;   
+  background-color: transparent;
+  color: black;
+  border: none !important;
+  border-radius: 10px;
   max-width: 600px;
   max-height: 300px;
-  text-align: center;   
+  text-align: center;
 }
 
 .popup-content p {
-  font-size: 20px;        /* Font size for paragraphs */
+  font-size: 20px; /* Font size for paragraphs */
   color: black;
 }
 
@@ -174,5 +205,3 @@ body {
   top: 33%;
   flex-direction: column;
 }
-
-
