--- a/frontend/src/styles/SignUpPage.module.css
+++ b/frontend/src/styles/SignUpPage.module.css
@@ -43,7 +43,7 @@
 }
 
 .tasteucla_logo {
-  width: 270px;
+  width: 175px;
   margin-top: 70px;
 }
 
@@ -147,6 +147,22 @@
   outline-offset: 0px;
 }
 
+.hide_password_header {
+  position: absolute;
+  margin-left: auto;
+  margin-right: 20px;
+  top: 79%;
+  outline-offset: 0px;
+}
+
+.hide_password {
+  position: absolute;
+  margin-left: 120px;
+  margin-right: auto;
+  top: 80%;
+  outline-offset: 0px;
+}
+
 .createAccount {
   color: #1e1e1e;
   font-size: 16.9814px;
@@ -159,7 +175,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  top: 82.5%;
+  top: 83.7%;
   width: min-content;
   height: min-content;
   white-space: nowrap;
@@ -169,7 +185,7 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 82%;
+  top: 83.5%;
   width: min-content;
   height: 5%;
   outline: solid 1px #9747ff;
@@ -188,7 +204,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  top: 90.5%;
+  top: 92.5%;
   width: min-content;
   height: min-content;
   white-space: nowrap;
@@ -198,7 +214,7 @@
   position: absolute;
   margin-left: auto;
   margin-right: auto;
-  top: 90%;
+  top: 92%;
   width: min-content;
   height: 5%;
   outline: solid 1px #9747ff;
